--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.samkirkland.com
-        username: ghiuser
+        server: ftp.betwick.com.ng
+        username: ghiuser@ghiassets.betwick.com.ng
         password: ${{ secrets.ftp_password }}
         server-dir: /public_html/ghiassets.betwick.com.ng/
