--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: betwick.com.ng
-        username: ${{ env.BETWICK_FTPUSER_ }}
+        username: ${env:BETWICK_FTPUSER_}
         password: ${{ secrets.BETWICK_FTPUSERPASS_ }}
         server-dir: /ghiassets/
