--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
+    - name: getting ftp user name
+      run: echo "1 - $BETWICK_FTPUSER_, 2 - ${{ env.BETWICK_FTPUSER_ }}, 3 -  ${{ vars.BETWICK_FTPUSER_ }} "
+  
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
     
