--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: betwick.com.ng
-        username: $BETWICK_FTPUSER_
+        username: ${{ vars.BETWICK_FTPUSER_ }}
         password: ${{ secrets.BETWICK_FTPUSERPASS_ }}
         server-dir: /ghiassets/
